text overflow bug fix

--- a/AcademicianPlatformLoginPrototype/wwwroot/css/site.css
+++ b/AcademicianPlatformLoginPrototype/wwwroot/css/site.css
@@ -864,6 +864,7 @@ p.duyuru-bulunmuyor {
 .card-text {
     font-size: 16px;
     margin-bottom: 10px;
+    max-width: 100%;
 }
 
     .card-text strong {
